# mengerflock

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  resume.txt
.claude/: settings.local.json
docs/: iteration-2-improvements.md
docs/iterations/: iteration-1-improvements.md
docs/superpowers/plans/: 2026-04-10-algoforge-implementation.md  2026-04-16-cvrptw-competition.md
docs/superpowers/specs/: 2026-04-10-algoforge-design.md  2026-04-16-cvrptw-competition-design.md
example-projects/binpacking/: config.yaml
example-projects/binpacking-experiment/: .gitignore  config.yaml
example-projects/binpacking-experiment-1/: config.yaml
example-projects/binpacking-experiment-1/seed/: solver.py
example-projects/binpacking-experiment-1/state/: objectives.md
example-projects/binpacking-experiment/prompts/: strategist.md  wildcard.md
example-projects/tsp/: config.yaml  eval.sh
example-projects/tsp-experiment-1/: .gitignore  run.py
examples/binpacking/: eval.sh
examples/tsp/: config.yaml
ganganath2026cvrptw/Evolved-HGS-VRPTW/: Individual.cpp  LICENSE  LocalSearch.cpp  Params.h  Population.cpp
project-template/: config.yaml
projects/tsp-experiment-1/: config.yaml
prompts/: researcher.md  strategist.md  wildcard.md
src/algoforge/: config.py  dashboard.sh  eval.sh  orchestrator.py  state.py
src/mengerflock/: cli.py  config.py  dashboard.sh  eval.sh  generate_instances.py  orchestrator.py  state.py  worktree.py
tests/: conftest.py  test_cli.py  test_config.py  test_orchestrator.py  test_state.py  test_worktree.py
(+57 files in other folders)
